--- a/WebGl-Build/index.html
+++ b/WebGl-Build/index.html
@@ -1,158 +1,209 @@
 <!DOCTYPE html>
 <html lang="en-us">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Uno Online</title>
-    <link rel="shortcut icon" href="TemplateData/favicon.ico">
-    <link rel="stylesheet" href="TemplateData/style.css">
-    <script src="https://connect.facebook.net/en_US/fbinstant.6.3.js"></script>
-  </head>
-  <body>
-    <div id="unity-container" class="unity-desktop">
-      <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
-      <div id="unity-loading-bar">
-        <div id="unity-logo"></div>
-        <div id="unity-progress-bar-empty">
-          <div id="unity-progress-bar-full"></div>
-        </div>
-      </div>
-      <div id="unity-warning"> </div>
-      <div id="unity-footer">
-        <div id="unity-webgl-logo"></div>
-        <div id="unity-fullscreen-button"></div>
-        <div id="unity-build-title">Uno Online</div>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <title>Unity WebGL Player | Uno Online</title>
+  <link rel="shortcut icon" href="TemplateData/favicon.ico">
+  <link rel="stylesheet" href="TemplateData/style.css">
+  <script src="https://connect.facebook.net/en_US/fbinstant.7.1.js"></script>
+</head>
+
+<body>
+  <div id="unity-container" class="unity-desktop">
+    <canvas id="unity-canvas" width=960 height=600 tabindex="-1"></canvas>
+    <div id="unity-loading-bar">
+      <div id="unity-logo"></div>
+      <div id="unity-progress-bar-empty">
+        <div id="unity-progress-bar-full"></div>
       </div>
     </div>
-    <script>
+    <div id="unity-warning"> </div>
+    <div id="unity-footer">
+      <div id="unity-webgl-logo"></div>
+      <div id="unity-fullscreen-button"></div>
+      <div id="unity-build-title">Uno Online</div>
+    </div>
+  </div>
+  <script>
+    var playerName = "";
+    var playerId = "";
+    var playerPic = ""
+    console.log("initializeAsync .....!!!")
 
-      var container = document.querySelector("#unity-container");
-      var canvas = document.querySelector("#unity-canvas");
-      var loadingBar = document.querySelector("#unity-loading-bar");
-      var progressBarFull = document.querySelector("#unity-progress-bar-full");
-      var fullscreenButton = document.querySelector("#unity-fullscreen-button");
-      var warningBanner = document.querySelector("#unity-warning");
+    var container = document.querySelector("#unity-container");
+    var canvas = document.querySelector("#unity-canvas");
+    var loadingBar = document.querySelector("#unity-loading-bar");
+    var progressBarFull = document.querySelector("#unity-progress-bar-full");
+    var fullscreenButton = document.querySelector("#unity-fullscreen-button");
+    var warningBanner = document.querySelector("#unity-warning");
 
-      // Shows a temporary message banner/ribbon for a few seconds, or
-      // a permanent error message on top of the canvas if type=='error'.
-      // If type=='warning', a yellow highlight color is used.
-      // Modify or remove this function to customize the visually presented
-      // way that non-critical warnings and error messages are presented to the
-      // user.
-      function unityShowBanner(msg, type) {
-        function updateBannerVisibility() {
-          warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
-        }
-        var div = document.createElement('div');
-        div.innerHTML = msg;
-        warningBanner.appendChild(div);
-        if (type == 'error') div.style = 'background: red; padding: 10px;';
-        else {
-          if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
-          setTimeout(function() {
-            warningBanner.removeChild(div);
-            updateBannerVisibility();
-          }, 5000);
-        }
-        updateBannerVisibility();
+    // Shows a temporary message banner/ribbon for a few seconds, or
+    // a permanent error message on top of the canvas if type=='error'.
+    // If type=='warning', a yellow highlight color is used.
+    // Modify or remove this function to customize the visually presented
+    // way that non-critical warnings and error messages are presented to the
+    // user.
+    function unityShowBanner(msg, type) {
+      function updateBannerVisibility() {
+        warningBanner.style.display = warningBanner.children.length ? 'block' : 'none';
       }
-
-      var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/WebGl-build.loader.js";
-      var config = {
-        dataUrl: buildUrl + "/WebGl-build.data",
-        frameworkUrl: buildUrl + "/WebGl-build.framework.js",
-        codeUrl: buildUrl + "/WebGl-build.wasm",
-        streamingAssetsUrl: "StreamingAssets",
-        companyName: "sixace",
-        productName: "Uno Online",
-        productVersion: "2.0",
-        showBanner: unityShowBanner,
-      };
-
-      // By default, Unity keeps WebGL canvas render target size matched with
-      // the DOM size of the canvas element (scaled by window.devicePixelRatio)
-      // Set this to false if you want to decouple this synchronization from
-      // happening inside the engine, and you would instead like to size up
-      // the canvas DOM size and WebGL render target sizes yourself.
-      // config.matchWebGLToCanvasSize = false;
-
-      // if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
-      //   // Mobile device style: fill the whole browser client area with the game canvas:
-
-      //   var meta = document.createElement('meta');
-      //   meta.name = 'viewport';
-      //   meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
-      //   document.getElementsByTagName('head')[0].appendChild(meta);
-      //   container.className = "unity-mobile";
-      //   canvas.className = "unity-mobile";
-
-      //   // To lower canvas resolution on mobile devices to gain some
-      //   // performance, uncomment the following line:
-      //   // config.devicePixelRatio = 1;
-
-
-      // } else {
-      //   // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-      //   canvas.style.width = "960px";
-      //   canvas.style.height = "600px";
-      // }
-
-      loadingBar.style.display = "block";
-
-      function startUnity(){
-        var script = document.createElement("script");
-        script.src = loaderUrl;
-        script.onload = () => {
-          createUnityInstance(canvas, config, (progress) => {
-            progressBarFull.style.width = 100 * progress + "%";
-          }).then((unityInstance) => {
-            loadingBar.style.display = "none";
-            fullscreenButton.onclick = () => {
-              unityInstance.SetFullscreen(1);
-            };
-          }).catch((message) => {
-            // alert(message); // facebook 不允许alert
-            console.error("Creating Unity Instance Failed: ", message);
-          });
-        };
-        document.body.appendChild(script);
+      var div = document.createElement('div');
+      div.innerHTML = msg;
+      warningBanner.appendChild(div);
+      if (type == 'error') div.style = 'background: red; padding: 10px;';
+      else {
+        if (type == 'warning') div.style = 'background: yellow; padding: 10px;';
+        setTimeout(function () {
+          warningBanner.removeChild(div);
+          updateBannerVisibility();
+        }, 5000);
       }
+      updateBannerVisibility();
+    }
 
-      console.log("=====> FBInstant.initializeAsync");
-      FBInstant.initializeAsync()
-        .then(function () {
-          console.info("=====> FBInstant.startGameAsync");
-          // 告诉Facebook加载完毕，可以进入游戏了
-          // 也可以在这里加载Unity游戏代码和资源，然后再加载完后再进入游戏         
-          FBInstant.startGameAsync().then(function() {
-            console.info("=====> screen size: " + `${screen.width} x ${screen.height}`);
-            console.info("=====> window size: " + `${window.innerWidth} x ${window.innerHeight}`)
+    var buildUrl = "./Build";
+    var loaderUrl = buildUrl + "/WebGl-build.loader.js";
+    var config = {
+      dataUrl: buildUrl + "/WebGl-build.data.br",
+      frameworkUrl: buildUrl + "/WebGl-build.framework.js.br",
+      codeUrl: buildUrl + "/WebGl-build.wasm.br",
+      streamingAssetsUrl: "StreamingAssets",
+      companyName: "sixace",
+      productName: "Uno Online",
+      productVersion: "2.0",
+      showBanner: unityShowBanner,
+    };
 
-            // 开始加载Unity游戏代码和资源
-            startUnity();
+    // By default, Unity keeps WebGL canvas render target size matched with
+    // the DOM size of the canvas element (scaled by window.devicePixelRatio)
+    // Set this to false if you want to decouple this synchronization from
+    // happening inside the engine, and you would instead like to size up
+    // the canvas DOM size and WebGL render target sizes yourself.
+    // config.matchWebGLToCanvasSize = false;
+
+    if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
+      // Mobile device style: fill the whole browser client area with the game canvas:
+
+      var meta = document.createElement('meta');
+      meta.name = 'viewport';
+      meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
+      document.getElementsByTagName('head')[0].appendChild(meta);
+      container.className = "unity-mobile";
+      canvas.className = "unity-mobile";
+
+      // To lower canvas resolution on mobile devices to gain some
+      // performance, uncomment the following line:
+      // config.devicePixelRatio = 1;
+
+
+    } else {
+      // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
+
+      canvas.style.width = "960px";
+      canvas.style.height = "600px";
+    }
+
+
+
+    loadingBar.style.display = "block";
+    var unityInstance1;
+
+    var script = document.createElement("script");
+    script.src = loaderUrl;
+    script.onload = () => {
+      console.log(" ENTER ::+-=======::+-=======::+-=======::+-=======::+-======= OnLoad");
+      createUnityInstance(canvas, config, (progress) => {
+        progressBarFull.style.width = 100 * progress + "%";
+      }).then((unityInstance) => {
+        console.log(" ENTER ::+-=======::+-=======::+-=======::+-=======::+-======= ");
+        unityInstance1 = unityInstance;
+        FBInstant.initializeAsync()
+          .then(function () {
+          
+            // Start loading game assets here
+            console.log("initializeAsync  strat")
+            // Once all assets are loaded, tells the SDK 
+            // to end loading view and start the game
+            FBInstant.startGameAsync()
+              .then(function () {
+                console.log("startGameAsync .....!!!", FBInstant.player)
+                console.log("startGameAsync .....!!!context : ", FBInstant.context)
+                // Retrieving context and player information can only be done
+                // once startGameAsync() resolves
+                var contextId = FBInstant.context.getID();
+                var contextType = FBInstant.context.getType();
+
+                playerName = FBInstant.player.getName();
+                playerPic = FBInstant.player.getPhoto();
+                playerId = FBInstant.player.getID();
+                unityInstance.SendMessage("FBGetdat_refrance", "GetDataCallBack", JSON.stringify({ playerName: playerName, playerId: playerId, playerPic: playerPic }));
+                loadingBar.style.display = "none";
+                fullscreenButton.onclick = () => {
+
+                  unityInstance.SetFullscreen(1);
+                };
+                console.log("startGameAsync END.....!!! playerName:" + playerName + ", playerPic: " + playerPic + ", playerId: " + playerId)
+
+                FBInstant.payments.onReady(function () {
+                  console.log('-=======>>> Payments Ready! <<-=======');
+                });
+
+                FBInstant.payments.getCatalogAsync().then(function (catalog) {
+                  console.log(catalog); // [{productID: '12345', ...}, ...]
+                  //GetFBProductData
+                  unityInstance.SendMessage("FBGetdat_refrance", "GetFBProductData", JSON.stringify(catalog));
+                });
+
+                FBInstant.payments.getPurchasesAsync().then(function (purchases) {
+                  console.log(purchases); // [{productID: '12345', ...}, ...]
+
+                  if (purchases.length > 0) {
+                    FBInstant.payments.consumePurchaseAsync(purchases[0].purchaseToken).then(function (consumed) {
+                      console.log("consumed", consumed)
+                      // Purchase successfully consumed!
+                      // Game should now provision the product to the player
+                    }).catch(function (error) {
+                      // Handle error
+                      console.log("error", error)
+                    });
+                  }
+                });
+
+              });
           });
-        });
 
+      }).catch((message) => {
+        console.log(message);
+      });
+    };
 
-      // var script = document.createElement("script");
-      // script.src = loaderUrl;
-      // script.onload = () => {
-      //   createUnityInstance(canvas, config, (progress) => {
-      //     progressBarFull.style.width = 100 * progress + "%";
-      //         }).then((unityInstance) => {
-      //           loadingBar.style.display = "none";
-      //           fullscreenButton.onclick = () => {
-      //             unityInstance.SetFullscreen(1);
-      //           };
-      //         }).catch((message) => {
-      //           alert(message);
-      //         });
-      //       };
+    function initiatePurchase(productID) {
+      console.log('-=======>>> Payments Logsss ! <<-=======' + productID);
+      FBInstant.payments.purchaseAsync({
+        productID: productID,//"goldpack6",
+        developerPayload: '',
+      }).then(function (purchase) {
+        console.log(purchase);
+        unityInstance1.SendMessage("FBGetdat_refrance", "GetPurchaseRes", JSON.stringify(purchase));
+      });
+    }
 
-      // document.body.appendChild(script);
+    function consumePurchaseAsync(purchaseToken) {
+      console.log('-=======>>> purchaseToken  ! <<-=======' + purchaseToken);
 
-    </script>
-  </body>
+      FBInstant.payments.consumePurchaseAsync(purchaseToken).then(function (consumed) {
+        console.log("consumed", consumed)
+      }).catch(function (error) {
+        // Handle error
+        console.log("error", error)
+      });
+    }
+
+    document.body.appendChild(script);
+
+  </script>
+</body>
+
 </html>
